--- a/app/templates/apitest.html
+++ b/app/templates/apitest.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Epicor API Test</title>
+        <title>Flask API Test</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     </head>
     <body>
@@ -61,9 +61,9 @@
                 <span id="apicallresult"></span>
             </div>
         </div>
-        <script src="{{ url_for('static', filename='javascript/jquery-3.2.1.slim.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='javascript/popper-1.14.7.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='javascript/bootstrap.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='javascript/jquery-3.2.1.js') }}"></script>
+        <script src="{{ url_for('static', filename='javascript/popper.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='javascript/bootstrap.js') }}"></script>
         <script src="{{ url_for('static', filename='javascript/app.js') }}"></script>
     </body>
 </html>
