Finished API call

--- a/app/templates/apitest.html
+++ b/app/templates/apitest.html
@@ -55,7 +55,7 @@
                             <input class="form-control" type="text" name="apiCallEndpoint" id="apiCallEndpoint" aria-describedby="apiCallEndpointHelp">
                             <small id="apiCallEndpointHelp" class="form-text text-muted">Example: https://[MyAppServerHost]/[MyAppServerInstance]/api/v1/endpoint/$metadata</small>
                         </div>
-                        <button class="btn btn-dark apiCallButton">Get Response</button>
+                        <button class="btn btn-dark" id="apiCallButton">Get Response</button>
                     </div>
                 </div>
             </div>
